--- a/css/desktop.css
+++ b/css/desktop.css
@@ -32,7 +32,7 @@ body {
 #headerleft{
 	/*width: 122px;*/
 	text-align: left;
-	width: 100px;
+	width: 50%;/*100px;*/
 	height: 40px;
 	float: left;
 }
@@ -43,14 +43,24 @@ body {
 }
 
 #headerright{
-	width: 720px;
-	/*width: 100%;*/
+	width: 50%; /*720px;*/
+	height: 40px;
 	float: left;
 	padding: 0;
 }
 
-.title{
+.titleright{
 	float: right;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	text-decoration: none;
+	font-size: 2.1em;
+	margin: 0;
+	font-weight: bold;
+}
+
+.titleleft{
+	float: left;
 	text-transform: uppercase;
 	letter-spacing: 4px;
 	text-decoration: none;
