--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,7 @@ table.reference td {
 }
 
 .project{
+	position: relative;
 	display: block;
 	width: 200px;
 	height: 200px;
@@ -59,7 +60,19 @@ table.reference td {
 	color: #ccc;
 }
 
+.grayscale { 
+	position:absolute; 
+	top: 0px; 
+	left: 0px; 
+	z-index: 1; 
+}
+
 .projecttitle{
+	position:absolute; 
+	top: 0px; left: 0px; 
+	z-index: 2; 
+	width: 200px;
+
 	margin: 0;
 	padding: 0;
 	padding-top: 3px;
@@ -69,6 +82,11 @@ table.reference td {
 }
 
 .projectdesc{
+	position:absolute;
+	top: 0px; left: 0px; 
+	z-index: 2; 
+	width: 200px;
+
 	/*text-align: left;*/
 	margin-top: 137px;
 	/*padding-left: 5px;
